<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">Froyo is premium self-serve frozen yogurt.</string>
    <string name="donuts">donuts</string>
    <string name="ice_cream_sandwiches">ice cream sandwiches</string>
    <string name="froyo">froyo</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="note">Note</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="Rebekah_desserts">Rebekah Desserts</string>
    <string name="Contact">Contact</string>
    <string name="Order">Order</string>
    <string name="Status">Status</string>
    <string name="Favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>